--- a/rmarkdown_practice.Rmd
+++ b/rmarkdown_practice.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Assignment 1: R Markdown practice"
-author: "FirstName LastName"
+author: "Yabsera LastName"
 date: "`r Sys.Date()`"
 documentclass: article
 geometry: margin=1in
